文字转语音  通过科大讯飞实现

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">TextBroadcast</string>
+    <string name="app_name">TextToSpeech</string>
+    <string name="xf">科大讯飞</string>
 </resources>
